--- a/Downloads/product-preview-card-component-main/index.html
+++ b/Downloads/product-preview-card-component-main/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="images/icon-cart.svg">
   <title>Frontend Mentor | Product preview card component</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -19,27 +20,27 @@
   </style>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <div class="card">
     <div class="col">
-      <img src="images/image-product-desktop.jpg" alt="">
+      <img src="images/image-product-desktop.jpg" id="img-pc"alt="">
+      <img src="images/image-product-mobile.jpg"id="img-mobile" alt="">
     </div>
     <div class="col" id="col2">
       <h3>Perfume</h3>
-      <h1>Gabrielle Essence Eau De Parfum</h1>
+      <h1 class="titulo-h1">Gabrielle Essence Eau De Parfum</h1>
 
-      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
+      <p class="descripcion">A floral, solar and voluptuous interpretation composed by Olivier Polge,
         Perfumer-Creator for the House of CHANEL.</p>
 
-      <p><span>$149.99</span>
-          $169.99</p>
+      <p><span>$149.99        </span><b style="text-decoration: line-through; display: inline;">$169.99</b></p>
 
-      <button>Add to Cart</button>
+      <button><i class="icon-cart"></i> Add to Cart</button>
     </div>
   </div>
 
