mejoré el diseño

--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/index.html
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/index.html
@@ -5,8 +5,8 @@
   <title>Porfolio</title>
   <base href="/">
   <meta name="theme-color" content="#452546">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1 #1b202d5c">
+  <link rel="icon" type="image/x-icon" href="https://i.imgur.com/7xygCwI.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
